commander.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
      - name: redis-commander
        image: rediscommander/redis-commander:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-svc
spec:
  type: NodePort
  ports: 
  - port: 8081
    targetPort: 8081
    nodePort: 30000
  selector:
    app: redis-commander
