service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: my-service 
spec: 
  selector: 
    app: solo-k8s
  ports: 
    - port: 80 
      targetPort: 5000
  type: ClusterIP
