ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solo-k8s-ingress 
spec:
  rules:
  - host: solo-k8s.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 5000
